Feat : 아이템 클릭 이벤트 구현

--- a/app/src/main/res/layout/fragment_lunch.xml
+++ b/app/src/main/res/layout/fragment_lunch.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.home.detail.Lunch">
+        tools:context=".ui.home.Tab.Lunch">
 
         <com.example.fitnutrijournal.ui.common.NutritionProgressView
             android:id="@+id/nutritionProgressView"
