--- a/app/src/main/res/layout/fragment_breakfast.xml
+++ b/app/src/main/res/layout/fragment_breakfast.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.home.detail.Breakfast">
+        tools:context=".ui.home.Tab.Breakfast">
 
         <com.example.fitnutrijournal.ui.common.NutritionProgressView
             android:id="@+id/nutritionProgressView"
