--- a/app/src/main/res/layout/nutrition_progress_view.xml
+++ b/app/src/main/res/layout/nutrition_progress_view.xml
@@ -107,7 +107,7 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
-            android:id="@+id/protein"
+            android:id="@+id/tvProtein"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
