--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="blue">#0019FA</color>
     <color name="light_green">#B3E2CD</color>
     <color name="light_blue">#c7e9ff</color>
+    <color name="orange">#FF7F0E</color>
 
 </resources>
