--- a/app/src/main/res/layout/fragment_diet_detail.xml
+++ b/app/src/main/res/layout/fragment_diet_detail.xml
@@ -4,11 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="com.example.fitnutrijournal.viewmodel.DietViewModel" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,8 +38,8 @@
                 android:id="@+id/foodName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textSize="20dp"
+                android:text="@{viewModel.selectedDiet.foodName}"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +87,8 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/unit"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                android:text="@={viewModel.totalContent}" />
 
             <EditText
                 android:id="@+id/unit"
@@ -230,7 +229,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="30dp"
                 android:gravity="end"
-                android:text="TextView"
+                android:text="@{viewModel.calculatedCalories}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView11"
                 app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -242,7 +241,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="30dp"
                 android:gravity="end"
-                android:text="TextView"
+                android:text="@{viewModel.calculatedCarbohydrate}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView19"
                 app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -254,7 +253,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="30dp"
                 android:gravity="end"
-                android:text="TextView"
+                android:text="@{viewModel.calculatedProtein}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView20"
                 app:layout_constraintTop_toBottomOf="@+id/textView19" />
@@ -266,7 +265,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="30dp"
                 android:gravity="end"
-                android:text="TextView"
+                android:text="@{viewModel.calculatedFat}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView21"
                 app:layout_constraintTop_toBottomOf="@+id/textView20" />
@@ -278,7 +277,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="30dp"
                 android:gravity="end"
-                android:text="TextView"
+                android:text="@{viewModel.totalContent}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView10"
                 app:layout_constraintTop_toBottomOf="@+id/textView9" />
