--- a/app/src/main/res/layout/fragment_diet_detail.xml
+++ b/app/src/main/res/layout/fragment_diet_detail.xml
@@ -107,7 +107,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button"
+                android:id="@+id/btnSave"
                 android:layout_width="213dp"
                 android:layout_height="49dp"
                 android:background="@drawable/border_section_light_green"
