--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -108,5 +108,16 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
 
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="100dp"
+            android:text="음식 추가하기"
+            android:textColor="@color/black"
+            app:backgroundTint="@color/light_green"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
