--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
             android:layout_gravity="bottom"
             android:background="@color/white"
             app:menu="@menu/bottom_nav_menu"
+            style="@style/BottomNavigationViewStyle"
             app:layout_anchor="@id/nav_host_fragment_activity_main"
             app:layout_anchorGravity="bottom" />
 
