Refactor : Diet -> Food 이름 변경

--- a/app/src/main/res/layout/fragment_diet_detail.xml
+++ b/app/src/main/res/layout/fragment_diet_detail.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/foodName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.selectedDiet.foodName}"
+                android:text="@{viewModel.selectedFood.foodName}"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
